Hooray!! The fix worked. The descriptionBody no longer takes up too much space in the descriptionWindow container, so I no longer needed the overflow-y: scroll behavior on descriptionWindow. I removed that, so it's 1 less scrollbar the user has to look at. For cleanup, I changed the Landing component to functional and added a Fragment wrapper for the header tags in it to try it out, since that's supposed to be an accessibility move. I think this is a wrap on the About page, then, as long as this commit doesn't break anything.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -341,7 +341,6 @@ h1, h3 {
   background-color: var(--lightgray);
   margin: 0;
   max-height: 500px;
-  overflow-y: scroll;
 }
 
 .descriptionWindow > h2 {
@@ -379,10 +378,6 @@ h1, h3 {
 
   .portfolioImage {
     max-width: 90%;
-  }
-
-  .descriptionWindow {
-    overflow-y: scroll;
   }
 
   .descriptionBody {
